<resources>
    <string name="app_name">The Weather Report</string>
    <string name="title_city_detail">City Detail</string>
    <string name="title_add_city">Add City</string>

    <string name="action_delete_item">Item Deleted</string>
    <string name="action_undo">UNDO?</string>
    <!-- Keys -->
    <string name="city_param_key">city_param</string>
    <string name="city_preference_key">saved_cities</string>
    <string name="city_ids_key">city_ids_key</string>

    <!-- Theme Values -->
    <string name="scrolling_view_behavior" >android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="add_city_key">add_city</string>
    <string name="search_hint">What city are you Looking for?</string>

    <string name="title_error">Error</string>
    <string name="button_ok">OK</string>
    <string name="max_temperature">Max Temperature:</string>
    <string name="min_temperature">Min Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="icon_description">The Weather Icon</string>


</resources>
